kube/alrest/x/todayinmarch2020/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todayinmarch2020
  labels:
    app.kubernetes.io/name: todayinmarch2020
  annotations:
    keel.sh/policy: all
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@hourly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: todayinmarch2020
  template:
    metadata:
      labels:
        app.kubernetes.io/name: todayinmarch2020
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: main
          image: ghcr.io/xe/x/todayinmarch2020:latest
          imagePullPolicy: "Always"
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "250m"
              memory: "128Mi"
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              httpHeaders:
                - name: X-Kubernetes
                  value: "is kinda okay"
            initialDelaySeconds: 3
            periodSeconds: 3
